2005-06-15  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/i386/linux/md.c
	(init_md): Setup the FP unit to use double precision and not extended
	precision.

	* configure.ac: Check for fpu_control.h

	* configure, config/config.h.in: Regenerated.

	Fixes bug reported by Daniel Bonniot <Daniel.Bonniot@inria.fr>

2005-06-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/baseClasses.c
	(stateCompleteClass): New array to store classes that should be in
	complete state at the end of the first initialization procedure.
	(initBaseClasses): Push all classes in stateCompleteClass to the
	COMPLETE state.

	* kaffe/kaffevm/gcFuncs.c
	(walkRefArray): Added some debug printing.
	(newArrayChecked): Removed unused condition.

	* kaffe/kaffevm/jni/jni.c: Cleaned up style.

2005-06-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/Preempt.java: Added a 'yield' for Solaris.

2005-06-13  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/sparc/jit.h: FRAMEOBJECT get the real enclosing object (and
	not the second one).

2005-06-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/serialver.in,
	kaffe/scripts/native2ascii.in:
	Added tools.jar to classpath to make them work again.

2005-06-12  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in: Put gnu.classpath.tools
	completely into tools.jar to make javap work fine.

	Reported by: Guilhem Lavaux  <guilhem@kaffe.org>

2005-06-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/exception.c
	(nullException): Fill in the "cause" field.

2005-06-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jni.c
	(Kaffe_ExceptionDescribe): Fixed memory allocation. Iterate through
	all causes of an exception.

2005-06-11  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-06-10  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/InternationalFormatter.java
	Implemented new class.

	2005-06-10  Roman Kennke  <roman@kennke.org>
